* Renaming `cursor` to `page` * Renaming `limit` to `handles_per_page` * Updating Swagger
